@@ -3,10 +3,12 @@ senomorerocketman-capsule-tech=Dedicated tech for personal transport capsules
 senomorerocketman-earlier-spaceships=Make basic spaceship tech available earlier
 senomorerocketman-remove-cargo-rockets=Remove cargo rockets, launchers and landing pads
 senomorerocketman-delivery-canons=Remove delivery canons
+senomorerocketman-earlier-logistics-system=Earlier logistics system
 
 [mod-setting-description]
 senomorerocketman-capsule-tech=desc 1
 senomorerocketman-earlier-spaceships=desc 2
 senomorerocketman-remove-cargo-rockets=desc 3
 senomorerocketman-remove-delivery-canons=desc 4
+senomorerocketman-earlier-logistics-system=Enable logistics with only rocket tech
 
