@@ -15,22 +15,20 @@ data:extend({
         default_value = true,
 		order = 1
 	},
-	{
-        type = "bool-setting",
-        name = "senomorerocketman-improve-capsulse",
-        -- setting_type = "runtime-global",
-        setting_type = "startup",
-        default_value = true,
-		order = 1
-	},
-	{
-        type = "bool-setting",
-        name = "senomorerocketman-cheaper-spaceship-takeoff",
-        -- setting_type = "runtime-global",
-        setting_type = "startup",
-        default_value = true,
-		order = 1
-	},
+	-- {
+        -- type = "bool-setting",
+        -- name = "senomorerocketman-improve-capsulse",
+        -- setting_type = "startup",
+        -- default_value = true,
+		-- order = 1
+	-- },
+	-- {
+        -- type = "bool-setting",
+        -- name = "senomorerocketman-cheaper-spaceship-takeoff",
+        -- setting_type = "startup",
+        -- default_value = true,
+		-- order = 1
+	-- },
 	{
         type = "bool-setting",
         name = "senomorerocketman-remove-cargo-rockets",
@@ -57,10 +55,17 @@ data:extend({
 	},
 	{
         type = "bool-setting",
-        name = "senomorerocketman-earlier-space-science-lab",
+        name = "senomorerocketman-earlier-logistics-system",
         -- setting_type = "runtime-global",
         setting_type = "startup",
         default_value = true,
 		order = 1
-	}
+	},
+	-- {
+        -- type = "bool-setting",
+        -- name = "senomorerocketman-earlier-space-science-lab",
+        -- setting_type = "startup",
+        -- default_value = true,
+		-- order = 1
+	-- },
 })
